<resources>
    <string name="title_table">Tabelle</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_tips">Prognosen</string>
    <string name="title_statistics">Statistik</string>

    <string name="app_name">NFL Tipapp</string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="login">Einloggen</string>
    <string name="register_now">Registrieren</string>
    <string name="name">Name</string>
    <string name="register">Registrieren</string>
    <string name="login_now">Einloggen</string>
    <string name="title_activity_main_fragment">NFL Tipapp</string>

    <string name="points">Punkte</string>
    <string name="afc">AFC</string>
    <string name="nfc">NFC</string>
    <string name="x_clinched_playoff">x - Clinched playoff</string>
    <string name="y_clinched_wild_card">y - Clinched Wild Card</string>
    <string name="z_clinched_division">z - Clinched Division</string>
    <string name="clinched_division_and_homefield_advantage">* - Clinched Division and Homefield Advantage</string>
    <string name="afc_east">AFC East</string>
    <string name="afc_north">AFC North</string>
    <string name="afc_south">AFC South</string>
    <string name="afc_west">AFC West</string>
    <string name="nfc_east">NFC East</string>
    <string name="nfc_north">NFC North</string>
    <string name="nfc_south">NFC South</string>
    <string name="nfc_west">NFC West</string>
    <string name="superbowl">Superbowl</string>
    <string name="afc_winner">AFC Winner</string>
    <string name="nfc_winner">NFC Winner</string>
    <string name="best_offense">Best Offense</string>
    <string name="best_defense">Best Defense</string>
    <string name="logout">Ausloggen</string>
    <string name="password_reset">Passwort zurücksetzen</string>
    <string name="lost_password">Passwort vergessen?</string>
    <string name="picture_of_the_player">Picture of the player</string>
    <string name="ranking">RANKING</string>
    <string name="prognosen">Prognosen</string>
    <string name="statistic">Statistik</string>
    <string name="image_for_calendar">image for calendar</string>
</resources>
