<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b1b1b">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/standings_swipe_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/frame_table"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="15dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#b2b2b2"
                        android:text="@string/x_clinched_playoff" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#b2b2b2"
                        android:text="@string/y_clinched_wild_card" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#b2b2b2"
                        android:text="@string/z_clinched_division" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#b2b2b2"
                        android:text="@string/clinched_division_and_homefield_advantage" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_afc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/afc"
            android:textColor="#b2b2b2"
            android:background="#1b1b1b"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_nfc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nfc"
            android:textColor="#b2b2b2"
            android:background="#1b1b1b"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>