<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/subtable_afc_east"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/afc_east"
            android:textSize="16sp"
            android:background="#D8D8D8"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/subtable_afc_north"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/afc_north"
            android:textSize="16sp"
            android:background="#D8D8D8"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/subtable_afc_south"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/afc_south"
            android:textSize="16sp"
            android:background="#D8D8D8"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/subtable_afc_west"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/afc_west"
            android:textSize="16sp"
            android:background="#D8D8D8"/>
    </LinearLayout>

</LinearLayout>